# mini-openclaw

./: .env.example  .gitignore  MEMORY.md  README.md  claw  claw.cmd  claw.ps1  demo_m2.py  pyproject.toml  report.md  requirements.txt  send_hello.py
agent/: README.md  cli.py  context.py  loop.py  memory.py  permissions.py  planner.py  planning.py  prompts.py  reviewer.py  sanitize.py  scheduler.py  subagents.py  todo_context.py  tracer.py  ui.py
backend/: client.py  fake_backend.py  multimodal.py  qwen_vision.py
demo/: create_timestamp_file.sh  inject.html  interactive-prompts.txt
demo_project/: README.md  config.json  train.py
docs/: ablation_report.md  acceptance-matrix.md  architecture.md  demo-day.md  interactive-acceptance.md  mindmap.html  technical-report.md
eval/: README.md  ablation-report.md  ablation_notes.md  judge.py  metrics.py  research_tasks.json  results.csv  run_core_ablations.py  run_planning_compaction_ablation.py  run_planning_recovery_ablation.py  run_suite.py  tasks.py  trace_cli.py  trace_report.py  trace_sample.jsonl  tracer.py
mcp/: README.md  calc_server.py  client.py
prompt/: demonstrations.py  render.py
security/: README.md  redteam.py  redteam_report.md  redteam_results.csv
services/: wx_file_transfer_server.py
skills/: README.md  loader.py
tests/: test_arxiv.py  test_backend.py  test_cli_ux.py  test_context.py  test_demonstrations.py  test_download.py  test_eval.py  test_experiment.py  test_file_tools.py  test_loop.py  test_memory.py  test_pdf.py  test_permissions_modes.py  test_planner_reviewer.py  test_reviewer.py  (+10 more)
(+63 files in other folders)
