[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-openclaw"
version = "0.1.0"
description = "Command-line research agent with tools, memory, MCP, and trace support."
requires-python = ">=3.10"

[project.scripts]
claw = "agent.cli:main"
openclaw = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*", "backend*", "eval*", "mcp*", "prompt*", "security*", "services*", "skills*", "tools*"]
